fix whitespace and add a README

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,7 @@
-
+body {
+  margin: 0;
+  padding: 0;
+}
 #quotesection {
    background-image: url(../images/ocean3.jpg);
    background-size: cover;
